--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@
     line-height: 20px;
     letter-spacing: 0.6px;
     text-transform: uppercase;
+    text-decoration: none;
     color: #FFFFFF;
 }
 
@@ -80,6 +81,7 @@
     font-size: 14px;
     line-height: 20px;
     color: #768088;
+    text-decoration: none;
 }
 
 /* MAIN */
