--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,13 @@
     color: #FFFFFF;
 }
 
-.header__nav_link
+.menu__link
 {
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
+.menu {
     font-family: 'Oxygen';
     font-style: normal;
     font-weight: 400;
@@ -24,11 +29,9 @@
     line-height: 20px;
     letter-spacing: 0.6px;
     text-transform: uppercase;
-    text-decoration: none;
-    color: #FFFFFF;
 }
 
-.header__h1
+.header-content__h1
 {
     font-family: 'Lora';
     font-style: normal;
@@ -40,7 +43,7 @@
     color: #FFFFFF;
 }
 
-.header__p
+.header-content__p
 {
     font-family: 'Oxygen';
     font-style: normal;
@@ -51,7 +54,7 @@
     color: rgba(255, 255, 255, 0.63);
 }
 
-.header__button
+.header-content__button
 {
     background-color: #DD783F;
     height: 44px;
@@ -70,23 +73,23 @@
 
 .navigation
 {
-    text-align: center;
-}
-
-.navigation__link
-{
     font-family: 'Lora';
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
+    text-align: center;
+}
+
+.navigation__link
+{
     color: #768088;
     text-decoration: none;
 }
 
 /* MAIN */
 
-.main__featured-posts_title
+.featured-posts__title
 {
     font-family: 'Oxygen';
     font-style: normal;
@@ -98,13 +101,13 @@
     color: #2E2E2E;
 }
 
-.main__first-featured-post_content
+.first-featured-post
 {
     background: url("images/TheRoadAheadBack.png");
     background-repeat: no-repeat;
 }
 
-.main__first-featured-post_title
+.first-featured-post__title
 {
     font-family: 'Lora';
     font-style: normal;
